# mbfl

./: .gitignore  .travis.yml  ANNOUNCE  BUGS  COPYING  DESCRIPTION.txt  INSTALL  Makefile.am  Makefile.ds  Makefile.ds.in  Makefile.in  Makefile.rl  NEWS  README  README.build  README.md  TODO  TODO.org  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  configure.ds  configure.sh  prepare.sh
admin/: admin-p-partition-assert-mounted-mode  admin-partition-assert-mounted-mode  admin-partition-assert-mounted-ro  admin-partition-assert-mounted-rw  admin-partition-mount-rw  admin-partition-print  admin-partition-print-modes
backup/: libmbfl.sh  libmbfltest.sh  mbflpp.sh  mbfltest.sh  preprocessor.m4
configuration/: Makefile.ds  configure.ds  project.make
doc/: MBFL.texi  Makefile.am  fdl.texiinc  gpl.texiinc  lgpl-3.0.texi  lgpl.texiinc  macros.texi  mbfl.style.css  mbfl.texi  sendmail-connector.sh  sendmail-plain.sh  two-levels-actions.sh
examples/: Makefile.am  at.sh  at.sh.m4  compress.sh  compress.sh.m4  email-connector.sh  email-plain.sh  mbfl-mail.sh  mbfl-smtp-gmail.sh  mbfl-smtp-posteit.sh  one-level-actions.sh  pwentries.sh.m4  semver.m4  sendmail-connector.sh  sendmail-mbfl.el  sendmail-mbfl.sh  sendmail-mbfl.sh.m4  sendmail-plain.sh  template-actions.sh  template-actions.sh.m4  template.sh  template.sh.m4  test-mbfl-mail.sh  test-mbfl-smtp-gmail.sh  test-mbfl-smtp-posteit.sh  test-sendmail-gmail.sh  test-sendmail-localhost.sh  test-sendmail-poste.sh  two-levels-actions.sh  vc.m4
gnuconfig/: acmacros.m4  autoconf.m4  autoconf.sh  automake.m4  automake.sh  do.sh  install-sh
infrastructure/: Makefile.library.in  acmacros.m4  autoconf.m4  automake.m4  develstuff.autoconf  develstuff.make  develstuff.sh  develstuff.texi  install-sh  libmbfl.sh  libversion.texiinc  make-configure-ac.sh  mbflpp.sh  mbflpp.sh.ok
lib/: libMBFL.sh.m4  libmbfl.sh.m4  libmbfltest.sh  libmbfluser.sh  libmbflvc.sh  loader.sh  mbfltest.sh
macros/: macros.m4  mbfl.m4  preprocessor.m4
meta/: DESCRIPTION.txt.in  Makefile.am  mbfl-config.in  mbfl.m4  mbfl.pc.in
meta/autoconf/: mbfl.m4  mmux-core.m4
meta/git/: config
meta/scripts/: add-footer-to-html-pages.sh  extract-function-names.sh  mbfl-config.in  mbfl.pc.in
meta/slackstuff/: config
meta/slackware/dev/: slack-desc.in
meta/slackware/doc/: slack-desc.in
meta/travis-ci/: install-bash-4.sh
mod/: dialog.sh.m4  file.sh.m4  getopts.sh.m4  macros.m4  main.sh.m4  message.sh.m4  programs.sh.m4  string.sh.m4
modules/: base.sh.m4  dialog.sh.m4  encode.sh.m4  file.sh.m4  getopts.sh.m4  interface.sh.m4  interfaces.sh.m4  main.sh.m4  message.sh.m4  program.sh.m4  programs.sh.m4  signal.sh.m4  string.sh.m4  system.sh.m4  variable.sh.m4
planner/: ExecProgramChannel  todo
problems/: bug01.sh
scripts/: mbfl-config  mbflpp.sh  mbfltest.sh
src/: Makefile.am
src/aclocal/: mbfl.m4
src/backup/: libmbfl-core.bash  libmbfl-preprocessor.m4  libmbfl-tests.bash  libmbfl.bash  libmbfl.sh  mbflpp.bash  mbflpp.sh  mbfltest.sh  preprocessor.m4
src/emacs/: mbfl.el
src/lib/: libmbfl-arch.bash.m4  libmbfl-at.bash.m4  libmbfl-containers.bash.m4  libmbfl-core.bash.m4  libmbfl-git.bash.m4  libmbfl-linker.bash.m4  libmbfl-passwords.bash.m4  libmbfl-preprocessor.m4  libmbfl-tests.bash.m4  libmbfl-utils.bash.m4  libmbfl.bash.m4  libmbfl.sh.m4  libmbfltest.bash.m4  libmbfltest.sh  libmbfltest.sh.m4  libmbflutils.sh.m4  loader.sh  preprocessor.m4
src/modules/: actions.bash.m4  actions.sh.m4  arrays.bash.m4  arrays.sh.m4  atexit.bash.m4  atexit.sh.m4  base.bash.m4  base.sh.m4  conditions.bash.m4  config-pathnames.sh.m4.in  config-values.bash.m4.in  config-values.sh.m4.in  dialog.bash.m4  dialog.sh.m4  encode.sh.m4  error-descriptors.bash.m4  exception-handlers.bash.m4  exceptional-conditions.bash.m4  fd.sh.m4  file.bash.m4  file.sh.m4  functions.bash.m4  getopts.bash.m4  getopts.sh.m4  hooks.bash.m4  integers.bash.m4  interfaces.sh.m4  locations.bash.m4  locations.sh.m4  main.bash.m4  main.sh.m4  math.bash.m4  message.sh.m4  object.bash.m4  process.bash.m4  process.sh.m4  program.bash.m4  program.sh.m4  semver.bash.m4  semver.sh.m4  (+13 more)
src/scripts/: mbflpp-pre.sh  mbflpp.sh  mbflpp.sh.m4  mbfltest-pre.sh  mbfltest.sh  mbfltest.sh.m4
src/utils-modules/: utils-file.bash.m4  utils-file.sh.m4
tests/: Makefile.am  all.tcl  arrays.test  arrays.test.m4  at.sh  atexit.test  atexit.test.m4  base.test.m4  bash-feature-coproc.test  bash-feature-coproc.test.m4  compress.sh  compress.test  compress.test.m4  conditions.test.m4  encode.test  encode.test.m4  error-descriptors.test.m4  exception-handlers.test.m4  exceptional-conditions.test.m4  fd.test  fd.test.m4  fifo.test.m4  fifotest.sh.m4  file.test  file.test.m4  functions.test.m4  getopts.test  getopts.test.m4  getopts.test.sh  hooks.test.m4  integers.test.m4  locations.test  locations.test.m4  main.test  main.test.m4  math.test.m4  mbfl-arch.test.m4  mbfl-containers.test.m4  mbfl-git.test.m4  mbfl-passwords.test.m4  (+33 more)
user/: user-console-colors  user-find-executable  user-fix-path-variable  user-fold-sentence  user-is-login-shell  user-make-backup-file  user-make-tempfile  user-make-temporary-user-directory  user-message-error  user-message-file-not-found  user-message-missing-executable  user-message-verbose  user-message-warning  user-p-pathname-test  user-pathname-executable  user-pathname-readable  user-pathname-readable-and-writable  user-pathname-writable  user-print-short-date  user-print-short-time  user-program-cp  user-program-date  user-program-fold  user-program-grep  user-program-mv  user-program-rm  user-program-sudo-mount  user-program-wrapper  user-remove-tilde  user-remove-tilde-recursive  user-validate-directory  user-validate-directory-readable  user-validate-directory-readable-and-writable  user-validate-directory-writable  user-validate-file  user-validate-file-readable  user-validate-file-readable-and-writable  user-validate-file-writable
vc/: vc-archive-select  vc-assert-preconditions  vc-editor  vc-log-add-sentence  vc-log-edit  vc-log-file-exists  vc-log-make  (+51 more)
(+8 files in other folders)
